[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/transmission_popup.gd" id="1_script"]

[node name="TransmissionPopup" type="CanvasLayer"]
layer = 20
script = ExtResource("1_script")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="SenderLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = "[INTERCEPTED TRANSMISSION]"
horizontal_alignment = 1

[node name="TextLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "Transmission text here..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="DismissButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "[ DISMISS ]"
